docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesDataSourceCRMFieldMapping__c.object
<CustomObject>
    <description>This object is used to store the mappings between Sales Data Source and CRM object fields</description>
    <fields>
        <fullName>sfsp__CRMFieldName__c</fullName>
        <description>The name of the field in the CRM object</description>
        <label>CRM Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesDataSourceId__c</fullName>
        <description>The Sales Data Source that this mapping belongs to</description>
        <label>Sales Data Source</label>
        <referenceTo>sfsp__SalesDataSource__c</referenceTo>
        <relationshipLabel>Sales Data Source CRM Field Mappings</relationshipLabel>
        <relationshipName>SalesDataSourceCRMFieldMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sfsp__SalesDataSourceReferenceFieldId__c</fullName>
        <description>The ID of the Reference field in the Sales Data Source</description>
        <label>Sales Data Source Reference Field Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sales Data Source CRM Field Mapping</label>
    <nameField>
        <displayFormat>SDS-CRM-Mapping-{0}</displayFormat>
        <label>Sales Data Source CRM Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Data Source CRM Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>